Update frontend and server to version 0.3.0
